Fixed overlapping navbar

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,9 @@ body {
 }
 
 .page {
-  width: 100vw;
+  /* width: 100vw; 
+  max-width: 100%; */
+  width: 100%;
   height: 100vh;
   display: flex;
   flex-direction: column;
