--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,5 +1,5 @@
 .navBar {
-  width: 100vw;
+  width: 100%;
   position: fixed;
   top: 0;
   display: flex;
